[gd_scene load_steps=2 format=3 uid="uid://4hcqf577upoj"]

[ext_resource type="Script" path="res://src/ui/ItemGUI.gd" id="1_g6c2i"]

[node name="ItemGUI" type="Control"]
custom_minimum_size = Vector2(175, 160)
anchor_left = 1.0
anchor_right = 1.0
offset_left = -175.0
offset_bottom = 160.0
grow_horizontal = 0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_g6c2i")

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.254902)
metadata/_edit_layout_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_layout_mode = 1

[node name="HFlowContainer" type="HFlowContainer" parent="VBoxContainer"]
offset_top = 12.0
offset_right = 175.0
offset_bottom = 38.0
size_flags_vertical = 6

[node name="LockpickLabel" type="Label" parent="VBoxContainer/HFlowContainer"]
offset_right = 75.0
offset_bottom = 26.0
text = "Lockpicks"

[node name="LockpickIcon" type="TextureRect" parent="VBoxContainer/HFlowContainer"]
offset_left = 79.0
offset_right = 79.0
offset_bottom = 26.0

[node name="LockpickCount" type="Label" parent="VBoxContainer/HFlowContainer"]
offset_left = 83.0
offset_right = 93.0
offset_bottom = 26.0
text = "0"

[node name="HFlowContainer2" type="HFlowContainer" parent="VBoxContainer"]
offset_top = 66.0
offset_right = 175.0
offset_bottom = 92.0
size_flags_vertical = 6

[node name="BoltLabel" type="Label" parent="VBoxContainer/HFlowContainer2"]
offset_right = 86.0
offset_bottom = 26.0
text = "Boltcutters"

[node name="BoltIcon" type="TextureRect" parent="VBoxContainer/HFlowContainer2"]
offset_left = 90.0
offset_right = 90.0
offset_bottom = 26.0

[node name="BoltCount" type="Label" parent="VBoxContainer/HFlowContainer2"]
offset_left = 94.0
offset_right = 104.0
offset_bottom = 26.0
text = "0"

[node name="HFlowContainer3" type="HFlowContainer" parent="VBoxContainer"]
offset_top = 121.0
offset_right = 175.0
offset_bottom = 147.0
size_flags_vertical = 6

[node name="NoiseLabel" type="Label" parent="VBoxContainer/HFlowContainer3"]
offset_right = 102.0
offset_bottom = 26.0
text = "Noisemakers"

[node name="NoiseIcon" type="TextureRect" parent="VBoxContainer/HFlowContainer3"]
offset_left = 106.0
offset_right = 106.0
offset_bottom = 26.0

[node name="NoiseCount" type="Label" parent="VBoxContainer/HFlowContainer3"]
offset_left = 110.0
offset_right = 120.0
offset_bottom = 26.0
text = "0"
